# HistomicsTK

./: .buildinfo  .condarc  .dockerignore  .eslintignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .install-openslide.sh  .pre-commit-config.yaml  .travis.yml  =1.12.1  AUTHORS.rst  CMakeLists.txt  CONTRIBUTING.rst  Cargo.toml  ColorConvolution.py  ColorDeconvolution.py  ComplementStainMatrix.py  ConvertSchedule.py  Dockerfile  Dockerfile-wheels  Gruntfile.js  HISTORY.rst  HistomicsTKDocker.code-workspace  LabelPerimeter.py  MANIFEST.in  NOTICE  OpticalDensityFwd.py  OpticalDensityInv.py  README.md  README.rst  ReinhardNorm.py  RudermanLABFwd.py  RudermanLABInv.py  SparseColorDeconvolution.py  SubmitTorque.py  TMA.py.lprof  TilingSchedule.py  Vagrantfile  api-docs.html  (+62 more)
.circleci/: config.yml
.github/: dependabot.yml
ITK_base_Image/: Dockerfile
_modules/: index.html
_sources/: histomicstk.annotations_and_masks.annotation_and_mask_utils.rst.txt  histomicstk.annotations_and_masks.annotation_database_parser.rst.txt  histomicstk.annotations_and_masks.annotations_to_object_segmentation_masks.rst.txt  histomicstk.annotations_and_masks.review_gallery.rst.txt  histomicstk.annotations_and_masks.rst.txt  histomicstk.features.rst.txt  histomicstk.filters.rst.txt  histomicstk.filters.shape.rst.txt  histomicstk.preprocessing.color_conversion.rst.txt  histomicstk.preprocessing.color_deconvolution.rst.txt  histomicstk.preprocessing.color_normalization.rst.txt  histomicstk.preprocessing.rst.txt  histomicstk.saliency.cellularity_detection_thresholding.rst.txt  histomicstk.saliency.rst.txt  histomicstk.saliency.tissue_detection.rst.txt  histomicstk.segmentation.label.rst.txt  histomicstk.segmentation.level_set.rst.txt  histomicstk.segmentation.nuclear.rst.txt  histomicstk.segmentation.rst.txt  histomicstk.workflows.specific_workflows.rst.txt  index.rst.txt  installation.rst.txt
ansible/: .gitignore  Dockerfile-girder-worker  Dockerfile-histomicstk  README.md  README.rst  deploy_docker.py  deploy_local.sh  deploy_local.yml  docker_ansible.yml  requirements.yml  vagrant.yml
devops/: README.rst  build.sh  configure.sh  connect.sh  deploy.sh  test.sh
doc/: Makefile  conf.py  index.rst  make.bat
docs/: Makefile  api-docs.rst  conf.py  environment.yml  examples.rst  histomicstk.annotations_and_masks.annotation_database_parser.rst  histomicstk.annotations_and_masks.annotations_to_OBJECT_mask_handler.rst  histomicstk.annotations_and_masks.annotations_to_masks_handler.rst  histomicstk.annotations_and_masks.annotations_to_semantic_segmentation_masks.rst  histomicstk.annotations_and_masks.masks_to_annotations_handler.rst  histomicstk.annotations_and_masks.polygon_merger.rst  histomicstk.annotations_and_masks.polygon_merger_v2.rst  histomicstk.annotations_and_masks.review_gallery.rst  histomicstk.annotations_and_masks.rst  histomicstk.annotations_and_masks.tips_for_scalable_annotation_rendering_for_developers.rst  histomicstk.filters.edge.rst  histomicstk.preprocessing.augmentation.rst  histomicstk.preprocessing.positive_pixel_count.rst  histomicstk.preprocessing.rst  histomicstk.rst  histomicstk.saliency.cellularity_detection.rst  histomicstk.saliency.cellularity_detection_superpixels.rst  histomicstk.saliency.cellularity_detection_thresholding.rst  histomicstk.saliency.rst  histomicstk.saliency.tissue_detection.rst  histomicstk.segmentation.positive_pixel_count.rst  histomicstk.segmentation.rst  histomicstk.utils.rst  histomicstk.workflows.rst  histomicstk.workflows.workflow_runner.rst  index.rst  installation.rst  make.bat  make_docs.sh  testing.rst  usage.rst
examples/: ColorConvolution.Test.py  ReinhardNorm.Test.py  test_sample.py  (+35 more)
histomicstk/features/: CMakeLists.txt  ComputeFSDFeatures.py  ComputeFSDs.py  ComputeGradientFeatures.py  ComputeHaralickFeatures.py  ComputeIntensityFeatures.py  ComputeMorphometryFeatures.py  ComputeNucleiFeatures.py  ComputeTextureFeatures.py  ExtractNuclearFeatures.py  FeatureExtraction.py  __init__.py  _compute_marginal_glcm_probs_cython.pyx  base.py  compute_fsd_features.py  compute_global_cell_graph_features.py  compute_global_graph_features.py  compute_gradient_features.py  compute_haralick_features.py  compute_intensity_features.py  compute_morphometry_features.py  compute_nuclei_features.py  graycomatrixext.py
histomicstk/segmentation/label/: AreaOpenLabel.py  CMakeLists.txt  CompactLabel.py  ComputeNeighborhoodMask.py  CondenseLabel.py  DeleteLabel.py  LabelPerimeter.py  ShuffleLabel.py  SplitLabel.py  TraceBounds.py  TraceLabel.py  WidthOpenLabel.py  __init__.py  _trace_object_boundaries_cython.pyx  area_open.py  compact.py  compute_nuclei_features_and_annotations.py  condense.py  delete.py  delete_border.py  delete_overlap.py  dilate_xor.py  isbf.cpp  isbf.pyx  isbfcpp.cpp  isbfcpp.h  passInf.h  perimeter.py  remove_overlap_nuclei.py  shuffle.py  split.py  trace_boundaries.py  trace_boundaries.pyx  trace_boundaries_cython.pyx  trace_boundaries_opt.cpp  trace_boundaries_opt.h  trace_boundaries_opt.pxd  trace_boundary.py  trace_boundary_cpp.cpp  trace_boundary_cpp.h  (+5 more)
histomicstk/segmentation/nuclear/: CMakeLists.txt  GaussianVoting.py  GradientFlow.py  MaxClustering.py  MergeSinks.py  MinimumModel.py  __init__.py  _max_clustering_cython.pyx  detect_nuclei_kofahi.py  detect_tile_nuclei.py  features_and_nuclei.py  gaussian_voting.py  gvf_tracking.py  max_clustering.py  min_model.py
macenko-pca/: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  mkdocs.yml  pyproject.toml
macenko-pca/.github/: dependabot.yml
macenko-pca/.github/workflows/: build.yml  lint.yml  publish.yml  pytest.yml
macenko-pca/docs/: api.md  index.md
macenko-pca/rust/: color_conversion.rs  color_deconvolution.rs  complement_stain_matrix.rs  float_trait.rs  lib.rs  linalg.rs  rgb_separate_stains_macenko_pca.rs  separate_stains_macenko_pca.rs  utils.rs
macenko-pca/src/macenko_pca/: __about__.py  __init__.py  deconvolution.py
macenko-pca/tests/: __init__.py  conftest.py  test_deconvolution.py
(+824 files in other folders)
