[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja", "numpy", "cython", "setuptools-scm"]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.pdf,*.svg,.pre-commit-config.yaml'
check-hidden = true
ignore-regex = '(^\s*"image/\S+": ".*|\b(HSI|Bult)\b)'
ignore-words-list = 'vor,nd,re-use,re-uses'
